fixed spacing issues.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -154,15 +154,15 @@ img[src*=neu] {
 
 .bgedu2 {
   background-color: white;
-  margin-left: 100px;
+  margin-left: 80px;
   border: 5px solid black;
   margin-top: 30px;
 }
 
 .bgedu3 {
   background-color: white;
-  margin-left: 100px;
-  margin-right: 30px;
+  margin-left: 80px;
+  margin-right: 100px;
   border: 5px solid black;
   margin-top: 30px;
 }
@@ -179,7 +179,7 @@ img[src*=neu] {
   background-color: orange;
   color: blue;
   margin-top: 30px;
-  margin-left: 60px;
+  margin-left: 120px;
   border: 5px solid black;
 }
 
@@ -196,6 +196,7 @@ img[src*=neu] {
   color: blue;
   margin-top: 30px;
   margin-left: 60px;
+  margin-right: 120px;
   border: 5px solid black;
 }
 
